<resources>
    <string name="app_name">Hi!WhereAmI?</string>
    <string name="facebook_app_id">1245433598911871</string>
    <string name="fb_login_protocol_scheme">1245433598911871</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="title_activity_big_maps">Map</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Create">Create</string>
    <string name="Invite">Invite</string>
    <string name="Enteremail">Enter friend\'s email</string>
    <string name="Name">Name</string>
    <string name="Birthday">Birthday</string>
    <string name="Phone">Phone</string>
    <string name="Genre">Genre</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Save">Save</string>
    <string name="Information">Information</string>
    <string name="EnterComment">Enter Comment...</string>
    <string name="Direction">Direction</string>
    <string name="Oldpassword">Old password</string>
    <string name="NewPassword">New Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Cancel">Cancel</string>
    <string name="ok">ok</string>
    <string name="rate">rate</string>
    <string name="Rate">Rate</string>
    <string name="MyProfile">My profile</string>
    <string name="Map">Map</string>
    <string name="Logout">Log out</string>
    <string name="CreateTeam">Create Team</string>
    <string name="Team">Team</string>
    <string name="AddMissingLocation">Add Missing Location</string>
    <string name="ChangeLanguage">Change Language</string>
    <string name="Vietnamese">Vietnamese</string>
    <string name="English">English</string>
    <string name="Recommended">Recommended</string>
    <string name="Since">Since</string>
    <string name="title_activity_chat">ActivityChat</string>
    <string name="Enter_your_Chat_Message">Enter your Message....</string>
    <string name="Please_Enter_your_Message">Plese enter your message</string>
    <string name="Create_your_room_chat">Create your room chat</string>
    <string name="Create_room">Create room</string>
    <string name="nearBy">Near you</string>
    <string name="loginFB">Continue with Facebook</string>
    <string name="loginGG">Continue with Google</string>
</resources>
