<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:background="#5595fb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="#0a1658"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/CreateTeam"/>
    <EditText
        android:id="@+id/txtTeamName"
        android:hint="Team's Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="2"
        >
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"></LinearLayout>
            <Button
                android:id="@+id/btnOk"
                android:text="@string/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnCancel"
                android:text="@string/Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>