<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.bruce.myapp.View.User.UserProfile"
    tools:showIn="@layout/activity_user_profile_constraint">
    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:text="@string/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/txtUserProfile_Name"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"

            />

        <TextView
            android:text="@string/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/txtUserProfile_Mail"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:enabled="false"
            />

        <TextView
            android:text="@string/Birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/txtBirthday"

            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:text="@string/Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            />
        <EditText
            android:id="@+id/txtPhone"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:text="@string/Genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="15sp"
                />
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radioGroup">
                <RadioButton android:id="@+id/rdiMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/Male"
                    />
                <RadioButton android:id="@+id/rdiFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Female"
                    />
            </RadioGroup>
        </LinearLayout>
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="15dp"
            android:layout_weight="5"
            android:text="@string/Save" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtUserProfile_Pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="9"
                android:background="#E0E0E0"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:drawablePadding="7dp"
                android:gravity="center|left"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:text="123456"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="#212121"
                android:gravity="center">

                <ImageButton

                    android:id="@+id/btnchangepass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_refresh_white_24dp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>



</android.support.v4.widget.NestedScrollView>
