<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bruce.myapp.View.Login.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/bag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:src="@drawable/imfmenu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="horizontal">


            <EditText
                android:drawablePadding="10dp"
                android:id="@+id/editTextUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:drawableLeft="@drawable/ic_account_white_24dp"
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="false"
                android:singleLine="false" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:gravity="center">

            <EditText
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:background="@drawable/shape"
                android:layout_width="200dp"
                android:layout_height="wrap_content">
                <Button
                    android:background="@android:color/transparent"
                    android:id="@+id/Login"
                    android:text="@string/Login"
                    android:textColor="#212121"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:background="@drawable/shape"
                android:layout_width="200dp"
                android:layout_height="match_parent">
                <Button
                    android:textColor="#212121"
                    android:background="@android:color/transparent"
                    android:id="@+id/Create"
                    android:text="@string/Create"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_fb"
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                app:com_facebook_login_text="Continue with Facebook"
                app:com_facebook_logout_text="Logout" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/Login_gg"
                android:layout_width="187dp"
                android:layout_height="wrap_content">

            </com.google.android.gms.common.SignInButton>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

